--- a/conf/application.conf
+++ b/conf/application.conf
@@ -215,7 +215,7 @@ hbase {
   column.family = ${?HBASE_COLUMN_FAMILY}
 
   //  table.name = "admin_data"
-  table.name = "enterprise"
+  table.name = "admin_data"
   table.name = ${?HBASE_TABLE_NAME}
 
   in.memory {
