Rename tracing app name env variable
- Renamed tracing app name env variable to a more appropriate name of
SBR_TRACING_APP_NAME

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -238,7 +238,7 @@ hbase {
 kamon {
   environment {
     service = "sbr-admin-data"
-    service = ${?ENVIRONMENT_VARIABLE_NAME}
+    service = ${?SBR_TRACING_APP_NAME}
   }
 
   trace {
